PharmaDemo/src/objects/Planogram__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Planogram Products</relationshipLabel>
        <relationshipName>Planograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_Image__c</fullName>
        <formula>IMAGE( Product__r.Grouped_Image__c ,  Product__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Planograms</relationshipLabel>
        <relationshipName>Planograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Space_Slot_Number__c</fullName>
        <description>Shelfs Top-&gt;Bottom A-&gt;D, Slots 1-&gt;4 Left-&gt;Right</description>
        <inlineHelpText>Shelfs Top-&gt;Bottom A-&gt;D, Slots 1-&gt;4 Left-&gt;Right</inlineHelpText>
        <label>Location on Shelf</label>
        <picklist>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Planogram</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Planogram Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planograms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>